# feedbook

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  GALLERY.md  README.kindle.md  README.kobo.md  README.md  feedbook.example.toml
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: release.yml
install/desktop/: feedbook.toml
install/kindle/: INSTALL.txt
install/kindle/extensions/feedbook/: config.xml  feedbook.toml  menu.json
install/kobo/: INSTALL.txt
install/kobo/.adds/feedbook/: feedbook.toml  run.sh
install/kobo/.adds/nm/: feedbook
patches/boring2/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  README.md
patches/boring2/src/: asn1.rs
patches/boring2/src/ssl/: mod.rs
patches/boring2/src/x509/: store.rs  verify.rs
src/: cache.rs  cli.rs  config.rs  cover.rs  epub.rs  error.rs  feed.rs  images.rs  log.rs  main.rs  sanitize.rs  scraper.rs  throttle.rs  util.rs
