[package]
name = "feedbook"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
tokio = { version = "1.51", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "charset", "gzip"] }
feed-rs = "2.3"
dom_smoothie = "0.17"
ammonia = "4"
regex = "1"
rusqlite = { version = "0.39", features = ["bundled"] }
rbook = "0.7.5"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
indicatif = "0.18"
thiserror = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "ico"] }
sha1 = { version = "0.10", features = ["std"] }
hex = "0.4"
url = "2"
ab_glyph = "0.2"
site_icons = "0.6.4"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
