[package]
name = "feedbook"
version = "0.2.3"
edition = "2024"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tokio = { version = "1.51", features = ["full"] }
wreq = { version = "6.0.0-rc.23", features = ["charset", "gzip", "brotli", "deflate"] }
wreq-util = "3.0.0-rc.10"
feed-rs = "2.3"
dom_smoothie = "0.17"
ammonia = "4"
regex = "1"
rusqlite = { version = "0.39", features = ["bundled"] }
rbook = "0.7.5"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
thiserror = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "ico"] }
sha1 = { version = "0.10", features = ["std"] }
hex = "0.4"
url = "2"
ab_glyph = "0.2"
dom_query = "0.27.0"
imagequant = "4"
png = "0.18.1"
oxipng = { version = "9", default-features = false, features = ["parallel"] }
bytemuck = "1"
sysinfo = { version = "0.38", default-features = false, features = ["system"] }

[dev-dependencies]
httpmock = "0.7"
tempfile = "3"

[patch.crates-io]
boring2 = { path = "patches/boring2" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
